tests/invalid/type/arity_textfile_tell_too_many.pts
import Io;

function main() : void {
    var f = Io.openText(Io.tempPath(), "r");
    f.tell(1);
}
